# Cryptocurrency-Analytics-Platform

./: LICENSE  README.md  pyproject.toml
data/raw/: sample.csv
docs/: changelog.md  usage.md
models/: README.md
notebooks/: exploration.ipynb
src/: analytics.py  data_loader.py  main.py  utils.py  visualization.py
tests/: test_main.py  test_utils.py
