[project]
name = "cryptocurrency-analytics-platform"
version = "0.1.0"
description = "A modular Python project for cryptocurrency analytics"
authors = [{ name = "Divya", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
pandas = "^2.2.2"
matplotlib = "^3.9.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.1"

[tool.black]
line-length = 88
